<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:binding="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.xxx.games.MainViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_home"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/btn_game1"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/bg_menu1"
            android:padding="15dp"
            android:text="真心话大冒险"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_game2"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_below="@id/btn_game3"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_menu4"
            android:padding="15dp"
            android:text="愤怒的皮卡丘"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:visibility="invisible"
            android:id="@+id/btn_game5"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_below="@id/btn_game2"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_menu5"
            android:padding="15dp"
            android:text="打Call"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:visibility="invisible"
            android:id="@+id/btn_game8"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_below="@id/btn_game2"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/btn_game5"
            android:background="@drawable/bg_menu5"
            android:padding="15dp"
            android:text="记牌器"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:visibility="invisible"
            android:id="@+id/btn_game6"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_below="@id/btn_game5"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_menu6"
            android:padding="15dp"
            android:text="分组神器"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:visibility="invisible"
            android:id="@+id/btn_game7"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_below="@id/btn_game5"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/btn_game6"
            android:background="@drawable/bg_menu7"
            android:padding="15dp"
            android:text="随机英雄"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_game3"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_below="@id/btn_game1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_menu2"
            android:padding="15dp"
            android:text="谁是卧底"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_game4"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_below="@id/btn_game1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/btn_game3"
            android:background="@drawable/bg_menu3"
            android:padding="15dp"
            android:text="逛公园"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:visibility="invisible"
            android:id="@+id/btn_game9"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_below="@id/btn_game6"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_menu4"
            android:padding="15dp"
            android:text="广告测试"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>
</layout>